sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:6: error: not found: value min
      if(plusPetitQue(j,min)){
                        ^