sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for(i<- 0 to getNombreValeurs()-2){
    var indice:Int = i
    for(j<-i+1 to getNombreValeurs()-1){
      if(plusPetitQue(j,min)){
        indice = j
      }
    }
    echange(i,indice)
  }
}